Mobile overflow fix.

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ section, footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 2em;
+    max-width: 90vw;
 }
 
 .avatars > .avatar {
@@ -177,7 +177,7 @@ section, footer {
 
 .screenshot {
     margin: 2em;
-    max-width: calc(100% - 2em);
+    max-width: calc(100% - 4em);
     width: 400px;
     height: 300px;
     transition: all 250ms;
